syntax = "proto3";

package v1;

option go_package = ".;v1";

import "google/api/annotations.proto";

message Todo {
  int64 id = 1;
  string title = 2;
  string note = 3;
}

message ListResponse {
  int64 code = 1;
  string message = 2;
  repeated Todo todo = 3;
}

message CreateRequest {
  string version = 1;
  Todo todo = 2;
}

message CreateResponse {
  int64 code = 1;
  string message = 2;
  Todo todo = 3;
}


message UpdateRequest {
  string version = 1;
  Todo todo = 2;
}

message UpdateResponse {
  int64 code = 1;
  string message = 2;
  Todo todo = 3;
}


service TodoService {
  rpc Create(CreateRequest) returns (CreateResponse) {
    option (google.api.http) = {
      post: "/v1/todo"
      body: "*"
    };
  };

  rpc Update(UpdateRequest) returns (UpdateResponse) {
    option (google.api.http) = {
      put: "/v1/todo"
      body: "*"
    };
  };
}
